tried to update the ui of the mini-app

--- a/public/index.html
+++ b/public/index.html
@@ -74,6 +74,12 @@
                 </button>
                 <h2 data-translate="food.title">Order Food</h2>
             </div>
+            <div class="step-progress" id="food-progress">
+                <div class="step-item" data-step="people"><span class="dot"></span></div>
+                <div class="step-item" data-step="event-type"><span class="dot"></span></div>
+                <div class="step-item" data-step="event-date"><span class="dot"></span></div>
+                <div class="step-item" data-step="location"><span class="dot"></span></div>
+            </div>
             
             <div class="form-container">
                 <div class="form-step active" data-step="people">
@@ -207,6 +213,11 @@
                     <i class="fas fa-arrow-left"></i>
                 </button>
                 <h2 data-translate="flour.title">Order Flour</h2>
+            </div>
+            <div class="step-progress" id="flour-progress">
+                <div class="step-item" data-step="flour-type"><span class="dot"></span></div>
+                <div class="step-item" data-step="quantity"><span class="dot"></span></div>
+                <div class="step-item" data-step="flour-location"><span class="dot"></span></div>
             </div>
             
             <div class="form-container">
